added hw 7_1